[gd_scene load_steps=9 format=3 uid="uid://u0fjdigubhmn"]

[ext_resource type="Script" path="res://ui/prompt/pickColorPrompt.gd" id="1_og2np"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2754q"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.14902, 0.8, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_esg4o"]
bg_color = Color(0.368627, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_detail = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvigr"]
bg_color = Color(0, 0.223529, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_detail = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqkfx"]
bg_color = Color(0.796078, 0.8, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_detail = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vxwg"]
bg_color = Color(0, 0.678431, 0.235294, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_detail = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ca8r"]
bg_color = Color(1, 0.231373, 0.00392157, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_detail = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwgpo"]
bg_color = Color(0.345098, 0, 0.603922, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_detail = 11

[node name="PickColorPrompt" type="Node2D"]
script = ExtResource("1_og2np")

[node name="Background" type="ColorRect" parent="."]
offset_left = 416.0
offset_top = 97.0
offset_right = 876.0
offset_bottom = 359.0
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="Explanation" type="RichTextLabel" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0272232
anchor_top = -0.0547945
anchor_right = 0.0272232
anchor_bottom = -0.0547945
offset_left = 25.0
offset_top = 26.0
offset_right = 406.0
offset_bottom = 79.0
theme_override_styles/normal = SubResource("StyleBoxFlat_2754q")
bbcode_enabled = true
text = "[center]Pick a color"

[node name="GridContainer" type="GridContainer" parent="Background"]
layout_mode = 0
offset_left = 97.0
offset_top = 80.0
offset_right = 367.0
offset_bottom = 220.0
columns = 3

[node name="Red" type="Button" parent="Background/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_esg4o")
text = "Red"
metadata/_edit_use_anchors_ = true

[node name="Blue" type="Button" parent="Background/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_jvigr")
text = "Blue"
metadata/_edit_use_anchors_ = true

[node name="Yellow" type="Button" parent="Background/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_tqkfx")
text = "Yellow"
metadata/_edit_use_anchors_ = true

[node name="Green" type="Button" parent="Background/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_8vxwg")
text = "Green"
metadata/_edit_use_anchors_ = true

[node name="Orange" type="Button" parent="Background/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_4ca8r")
text = "Orange"
metadata/_edit_use_anchors_ = true

[node name="Purple" type="Button" parent="Background/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_cwgpo")
text = "Purple"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Background/GridContainer/Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="Background/GridContainer/Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="Background/GridContainer/Yellow" to="." method="_on_yellow_pressed"]
[connection signal="pressed" from="Background/GridContainer/Green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="Background/GridContainer/Orange" to="." method="_on_orange_pressed"]
[connection signal="pressed" from="Background/GridContainer/Purple" to="." method="_on_purple_pressed"]
